--- a/client/src/components/footerEnd/footerend.css
+++ b/client/src/components/footerEnd/footerend.css
@@ -8,6 +8,11 @@
   margin-right: 2%;
 }
 
+h6 {
+  margin: 5vh;
+  text-align: center;
+  }
+
 @media only screen and (max-width: 820px) {
   .footerEnd {
     display: flex;
